[tool.poetry]
name = "mlflow-server"
version = "0.1.0"
description = ""
authors = ["teisnp <teis.n.p@gmail.com>"]
readme = "README.md"
packages = [{include = "mlflow_server"}]

[tool.poetry.dependencies]
python = "^3.10"
mlflow-skinny = "^2.2.2"
flask = "^2.2.3"
sqlalchemy = "^2.0.8"
alembic = "^1.10.2"
psycopg2-binary = "^2.9.5"
boto3 = "^1.26.104"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
