[tool.poetry]
name = "mlflow-server"
version = "0.1.0"
description = ""
authors = ["teisnp <teis.n.p@gmail.com>"]
readme = "README.md"
packages = [{include = "mlflow_server"}]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.26.104"
numba = "^0.56.4"
mlflow = {extras = ["extras"], version = "^2.2.2"}
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
