[tool.poetry]
name = "mlflow-server"
version = "0.1.0"
description = ""
authors = ["teisnp <teis.n.p@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
boto3 = "^1.26.104"
numba = "^0.56.4"
mlflow = {extras = ["extras"], version = "^3.3.2"}
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
